<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgTonyStark"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/tony_stark"></ImageView>

            <TextView
                android:id="@+id/txtTonyStark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:text="Tony Stark"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTonyStark"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:text="StackIndustries@hello"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmail"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:text="+91 7877315699"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgSteve"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/captain_america"></ImageView>

            <TextView
                android:id="@+id/txtSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgSteve"
                android:text="Steve Rogers"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSteve"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgSteve"
                android:text="SteveIndustries@hello"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhoneSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailSteve"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgSteve"
                android:text="+91 787731558899"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgWidow"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/widow"></ImageView>

            <TextView
                android:id="@+id/txtWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgWidow"
                android:text="Black Widow"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtWidow"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgWidow"
                android:text="@string/detectivewidow_hello"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhoneWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailWidow"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgWidow"
                android:text="+23 65498965"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgThor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/thor"></ImageView>

            <TextView
                android:id="@+id/txtThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="@string/odinson_thor"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtThor"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="@string/asgardhell_hello"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhoneThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailThor"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="+11 2546684 "
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgHulk"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/hulk"></ImageView>

            <TextView
                android:id="@+id/txtHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="Bruce Banner"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHulk"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="BruceIndustries@hello"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhoneHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailHulk"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="+89 58558899"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTaChala"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/black_panther"></ImageView>

            <TextView
                android:id="@+id/txtTaChala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgTaChala"
                android:text="Black Panther"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailTaChala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTaChala"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgTaChala"
                android:text="WakandaIndustries@hello"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhoneTaChala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailTaChala"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgTaChala"
                android:text="+91 787799"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>